7-compute.tf
resource "google_compute_instance" "vm" {
  name         = "lab-vm"
  machine_type = "e2-medium"
  zone         = "asia-northeast2-a"

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
      size  = 20
    }
  }

  network_interface {
    subnetwork = google_compute_subnetwork.kakure.id

    # External IP for SSH (lab simplicity)
    access_config {}
  }
  metadata_startup_script = file("./startup.sh")
 

  tags = ["ssh", "http", "http-server"]

  depends_on = [
    google_compute_subnetwork.kakure,
    google_compute_router_nat.nat
  ]
}



# example script
 # metadata_startup_script = <<-EOT
  #   #!/bin/bash
  #   sudo apt update -y
  #   sudo apt install -y git
  #   sudo apt install -y git nginx

  #   sudo systemctl enable nginx
  #   sudo systemctl start nginx


  #   cd /tmp
  #   sudo git clone https://github.com/BalericaAI/SEIR-1.git

  #   sudo chmod +x /tmp/SEIR-1/weekly_lessons/weeka/userscripts/supera.sh
  #   sudo bash /tmp/SEIR-1/weekly_lessons/weeka/userscripts/supera.sh
  # EOT
